# powerfinger

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  HANDOFF.md  LICENSE-HARDWARE  LICENSE-SOFTWARE  README.md
companion/: README.md
docs/: ACCESSIBILITY-RESEARCH.md  AGENTIC_CHECKLIST.md  BALL-DIAMETER.md  BATTERY-SAFETY.md  CLICK-MECHANISMS.md  COMBINATORICS.md  COMPANION-APP-ARCH.md  CONSUMER-TIERS.md  DEFENSIVE-PUBLICATION.md  DUAL-FOOTPRINT.md  FIRMWARE-ROADMAP.md  GLIDE-SYSTEM.md  GO-NO-GO-RUBRIC.md  IP-STRATEGY.md  MULTI-RING-PROTOCOL.md  NRF52840-MIGRATION.md  OUTREACH.md  PATENT-CLAIM-MAP.md  PIEZO-HAPTIC-ANALYSIS.md  POWER-BUDGET.md  POWERPEN-SPEC.md  POWERPUCK-SPEC.md  PROTOTYPE-SPEC.md  REGULATORY-PRESCAN.md  SURFACE-TEST-PROTOCOL.md  VENDOR-VERIFICATION.md  WAND-COMPETITIVE.md
firmware/hub/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/hub/components/ble_central/: CMakeLists.txt  ble_central.c
firmware/hub/components/ble_central/include/: ble_central.h
firmware/hub/components/companion_protocol/: CMakeLists.txt  companion_protocol.c
firmware/hub/components/companion_protocol/include/: companion_protocol.h
firmware/hub/components/event_composer/: CMakeLists.txt  event_composer.c
firmware/hub/components/event_composer/include/: event_composer.h
firmware/hub/components/hub_control/: CMakeLists.txt  hub_control.c
firmware/hub/components/hub_control/include/: hub_control.h
firmware/hub/components/hub_identity/: CMakeLists.txt  hub_identity.c
firmware/hub/components/hub_identity/include/: hub_identity.h
firmware/hub/components/role_engine/: CMakeLists.txt  role_engine.c
firmware/hub/components/role_engine/include/: role_engine.h
firmware/hub/components/usb_hid/: CMakeLists.txt  hid_report_descriptor.c  usb_hid_mouse.c
firmware/hub/components/usb_hid/include/: hid_report_descriptor.h  usb_hid_mouse.h
firmware/hub/main/: CMakeLists.txt  main.c
firmware/pen/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/pen/components/pen_wake/: CMakeLists.txt  pen_wake_debounce.c
firmware/pen/components/pen_wake/include/: pen_wake_debounce.h
firmware/pen/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/puck/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/puck/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/ring/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/ring/components/ble_hid/: CMakeLists.txt  ble_gap_handler.c  ble_hid_mouse.c  hid_report_descriptor.c
firmware/ring/components/ble_hid/include/: ble_config.h  ble_gap_handler.h  ble_hid_mouse.h
firmware/ring/components/click/: CMakeLists.txt  calibration.c  click_dome.c  click_none.c  click_pen.c  dead_zone.c
firmware/ring/components/click/include/: calibration.h  click_interface.h  dead_zone.h
firmware/ring/components/diagnostics/: CMakeLists.txt  ring_diagnostics.c
firmware/ring/components/diagnostics/include/: ring_diagnostics.h
firmware/ring/components/hal/: CMakeLists.txt  ring_identity.c  ring_settings.c
firmware/ring/components/hal/esp_idf/: hal_adc_esp.c  hal_ble_esp.c  hal_gpio_esp.c  hal_ota_esp.c  hal_sleep_esp.c  hal_spi_esp.c  hal_storage_esp.c  hal_timer_esp.c
firmware/ring/components/hal/include/: hal_adc.h  hal_ble.h  hal_gpio.h  hal_ota.h  hal_sleep.h  hal_spi.h  hal_storage.h  hal_timer.h  hal_types.h  ring_identity.h  ring_settings.h
firmware/ring/components/power/: CMakeLists.txt  power_manager.c
firmware/ring/components/power/include/: power_manager.h
firmware/ring/components/runtime_health/: CMakeLists.txt  ring_runtime_health.c
firmware/ring/components/runtime_health/include/: ring_runtime_health.h
firmware/ring/components/sensors/: CMakeLists.txt  ball_hall.c  paw3204.c  pmw3360.c  pmw3360_srom.h  sensor_none.c
firmware/ring/components/sensors/include/: sensor_ball_hall.h  sensor_interface.h  sensor_paw3204.h  sensor_pmw3360.h
firmware/ring/components/state_machine/: CMakeLists.txt  ring_state.c
firmware/ring/components/state_machine/include/: ring_config.h  ring_state.h
firmware/ring/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/test/: CMakeLists.txt  test_ball_hall.c  test_calibration.c  test_click_pen.c  test_companion_protocol.c  test_dead_zone.c  test_event_composer.c  test_hub_control.c  test_hub_identity.c  test_main.c  test_pen_wake_debounce.c  test_pmw3360.c  test_power_manager.c  test_ring_diagnostics.c  test_ring_identity.c  test_ring_runtime_health.c  test_ring_settings.c  test_role_engine.c  test_state_machine.c  test_usb_hid.c
firmware/test/mocks/: mock_hal.c  mock_hal.h
firmware/test/unity/: unity.c  unity.h
hardware/: README.md
hardware/bom/: R30-BALL-NONE-NONE.csv  R30-OLED-NONE-NONE.csv  README.md  USB-HUB.csv  WSTD-BALL-NONE-NONE.csv
hardware/ring/: README.md
hardware/shared/: README.md
hardware/wand/: README.md
